
install(FILES
    core-compiler.h
    core-file.h
    core-random.h
    core-thread.h
    gfx-drawable.h
    core-data.h
    core-logger.h
    core-sha.h
    core-timers.h
    gfx-surface.h
    core-database.h
    core-maths.h
    core-string.h
    core-xml.h
    core-dynamicarray.h
    core-matrix.h
    core-tasks.h
    fonts.h
    gfx-colour.h
    DESTINATION include/geek)

