library_includedir=$(includedir)/geek
library_include_HEADERS=core-maths.h core-random.h core-xml.h gfx-drawable.h gfx-surface.h gtk-chart.h core-dynamicarray.h core-matrix.h gtk-opengl.h core-logger.h core-string.h core-file.h core-compiler.h core-thread.h core-database.h core-sha.h core-tasks.h core-timers.h fonts.h core-data.h


