
bin_PROGRAMS=dynamicarray xmltest mkdirs

dynamicarray_SOURCES=dynamicarray.cpp
dynamicarray_CXXFLAGS=-Wall -Werror -O0
dynamicarray_LDFLAGS=../../src/core/libgeek-core.la

xmltest_SOURCES=xmltest.cpp
xmltest_CXXFLAGS=-Wall -Werror -O0
xmltest_LDFLAGS=../../src/core/libgeek-core.la

mkdirs_SOURCES=mkdirs.cpp
mkdirs_CXXFLAGS=-Wall -Werror -O0
mkdirs_LDFLAGS=../../src/core/libgeek-core.la

