
noinst_PROGRAMS=dynamicarray xmltest mkdirs sha tasks timers

dynamicarray_SOURCES=dynamicarray.cpp
dynamicarray_LDADD=../../src/core/libgeek-core.la

xmltest_SOURCES=xmltest.cpp
xmltest_LDADD=../../src/core/libgeek-core.la

mkdirs_SOURCES=mkdirs.cpp
mkdirs_LDADD=../../src/core/libgeek-core.la

sha_SOURCES=sha.cpp
sha_LDADD=../../src/core/libgeek-core.la

tasks_SOURCES=tasks.cpp
tasks_LDADD=../../src/core/libgeek-core.la

timers_SOURCES=timers.cpp
timers_LDADD=../../src/core/libgeek-core.la

